--- a/softwerkskammer/locales/translation-en.json
+++ b/softwerkskammer/locales/translation-en.json
@@ -70,7 +70,10 @@
     "new": "New",
     "none": "none",
     "events_in_europe": "Events in Europe",
-    "events_in_europe_desc": "Calendar of conferences, open spaces, bar camps and other events"
+    "events_in_europe_desc": "Calendar of conferences, open spaces, bar camps and other events",
+    "socrates_text": "5th International Software Craftsmanship and Testing Conference",
+    "socrates_date": "27-30 August 2015, Soltau, Germany",
+    "socrates_register": "Pre-Register here!"
   },
   "error": {
     "congratulations": "Congratulations!",
