Oops, this did not get translated...

--- a/socrates/locales/translation-en.json
+++ b/socrates/locales/translation-en.json
@@ -234,7 +234,7 @@
     "invitation": "Invitation",
     "reminder": "Reminder",
     "write": "Compose Notification",
-    "others": "Sonstige",
+    "others": "Others",
     "to_member": "To member",
     "to_participants": "only to the activity's participants (not to groups)",
     "subject": "Subject",
