First steps towards displaying the roommate in the participant's profile.

--- a/socrates/locales/translation-en.json
+++ b/socrates/locales/translation-en.json
@@ -270,6 +270,7 @@
     "lastname": "Last name",
     "email": "E-mail",
     "twitter": "Twitter",
+    "roommate": "Your roommate",
     "location": "City / Region",
     "profession": "Profession",
     "interests": "Main focus of interest",
