remove resign from SoCraTes and add missing translation in softwerkskammer

--- a/softwerkskammer/locales/translation-de.json
+++ b/softwerkskammer/locales/translation-de.json
@@ -185,7 +185,8 @@
   },
   "activityresults": {
     "new": "Neue Session Snap Sammlung",
-    "photoTitlePlaceholder": "Was kann man hier sehen?"
+    "photoTitlePlaceholder": "Was kann man hier sehen?",
+    "submit": "Speichern"
   },
   "payment": {
     "title": "Zahlung",
