--- a/softwerkskammer/locales/translation-en.json
+++ b/softwerkskammer/locales/translation-en.json
@@ -185,6 +185,7 @@
   "activityresults": {
     "new": "New Session Snap Collection",
     "photoTitlePlaceholder": "What's on this photo?"
+    "submit": "Submit"
   },
   "payment": {
     "title": "Payment",
