--- a/socrates/locales/translation-en.json
+++ b/socrates/locales/translation-en.json
@@ -125,8 +125,8 @@
   "error": {
     "click_links": "I'd suggest you click on one of the links in the header.",
     "congratulations": "Congratulations!",
-    "datetime": "| Date and time",
-    "detailed_report": "| give us a detailed error report",
+    "datetime": "Date and time",
+    "detailed_report": "give us a detailed error report",
     "error500_text": [
       "p Please ",
       "  a(href=\"https://github.com/softwerkskammer/Agora/issues/\") $t(error.detailed_report):",
@@ -140,10 +140,10 @@
     "found500": "You found an error.",
     "general": "General Problem",
     "missing_page": "Missing Page",
-    "os_browser": "| Operating system and browser, including versions.",
+    "os_browser": "Operating system and browser, including versions.",
     "page_is_missing": "This page is missing.",
     "sorry": "The Agora team begs your pardon.",
-    "stacktrace500": "| The Stacktrace"
+    "stacktrace500": "The Stacktrace"
   },
   "general": {
     "add": "Add",
